Closed Bug 111333 Opened 23 years ago Closed 23 years ago

leaks up 40 bytes after landing for bug #110850

Categories

(SeaMonkey :: General, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.7

People

(Reporter: sspitzer, Assigned: alecf)

Details

Attachments

(4 files)

leaks up 40k after landing for bug #xxxxx we're investigating.
Summary: leaks up 40k after landing for bug #xxxxx → leaks up 40k after landing for bug #110850
Either the history ab isn't getting closed (perhaps because shutdown notifications dont' work reliably anymore), or I screwed up the leak stats for mork objects
one thing that shows up is that we're leaking 40 morkObjects, but those appear to be only 40 bytes per instance.
40K, no. 40B yes. I'm a moron, who can't read a leak log if his life depended on it. keeping this open, as we appear to be leaking a morkObject. this may not be a new leak, it's just that david's recent fixes now make it so we report those leaks.
Summary: leaks up 40k after landing for bug #110850 → leaks up 40 bytes after landing for bug #110850
believe me, we leaked a lot more than that before. Purify doesn't show any morkObject leaks, so I'm a little unsure who to trust. It might be a global object...
I don't think the bloat tests even start mail, so this might be a global history leak.
yes, it's global history, and it's almost certainly the global factory. Anyway, I'm looking at it, but it's not a high priority since actual leaks have gone way down.
how exciting. turns out it was pretty darn easy. we were just leaking an nsIMdbFactory can I get sr=bienvenu, r=sspitzer?
assigning to ME since I fixed it :)
Assignee: bienvenu → alecf
hmm.. now I'm getting an assertion on shutdown with this leak. I'm not sure if its really me or not though.
Famous last words ... not sure if it's really me... I'll try the patch and see if I see assertions.
actually, see bug 112058 for a more complete patch that cleans up lots of non-mork leaks.
Hey, Alec, I'm not seeing assertions - what are the assertions? Assuming they're not mork assertions, r=bienvenu on the patch.
Comment on attachment 59227 [details] [diff] [review] fix global history leak r=bienvenu,assuming assertions aren't new.
Attachment #59227 - Flags: review+
OK, I see the assertion if I just start up with the browser and shutdown. I'll attach a patch for that assertion.
Alec, the assertion is caused by your change, but the attached patch should fix it. Do you want to try it and check it in with your patch?
Comment on attachment 59266 [details] [diff] [review] fix for assertions. sr=sspitzer
Attachment #59266 - Flags: superreview+
Comment on attachment 59227 [details] [diff] [review] fix global history leak sr=sspitzer
Attachment #59227 - Flags: superreview+
Comment on attachment 59266 [details] [diff] [review] fix for assertions. awesome! r=alecf and I'm checking both in.
Attachment #59266 - Flags: review+
thanks guys, fix is in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9.7
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: