fix for assertion that would be caused by my next checkin, checking in for bienvenu, r=alecf, sr=sspitzer bug 111333